--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ form {
 }
 
 /* botones */
-.btn-primary{
+.btn-primary {
     --bs-btn-color: #fff;
     --bs-btn-bg: #c20000 !important;
     --bs-btn-border-color: #c20000 !important;
@@ -92,10 +92,10 @@ form {
     --bs-btn-hover-border-color: #990000 !important;
     --bs-btn-focus-shadow-rgb: 49,132,253;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #c20000 !Important;
+    --bs-btn-active-bg: #c20000 !important;
     --bs-btn-active-border-color: #c20000 !important;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
     --bs-btn-disabled-bg: #650000 !important;
-    --bs-btn-disabled-border-color: #650000 !Important;
+    --bs-btn-disabled-border-color: #650000 !important;
 }
